--- a/client/src/components/Addbuss.css
+++ b/client/src/components/Addbuss.css
@@ -1,4 +1,4 @@
-input[type=text], select {
+input[type=text], input[type=date], input[type=number] select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -10,7 +10,7 @@ input[type=text], select {
   
   input[type=submit] {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #e04c54;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -20,7 +20,7 @@ input[type=text], select {
   }
   
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #e04c54;
   }
   
   .addbus {
